# django-activitypub-toolkit

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  setup.cfg
.woodpecker/: .test.yml
activitypub/: apps.py  authentication_backends.py  contexts.py  decorators.py  exceptions.py  factories.py  forms.py  frames.py  handlers.py  message_processors.py  middleware.py  models.py  processors.py  publishers.py  resolvers.py  schemas.py  settings.py  signals.py  tasks.py
activitypub/adapters/lemmy/: admin.py  apps.py  authentication.py  choices.py  exceptions.py  factories.py  filters.py  forms.py  handlers.py  pagination.py  permissions.py  projections.py  serializers.py  tasks.py  validators.py
activitypub/admin/: actions.py  admins.py  base.py  filters.py
activitypub/core/: apps.py  authentication_backends.py  contexts.py  decorators.py  exceptions.py  factories.py  handlers.py  middleware.py  permissions.py  processors.py  publishers.py  renderers.py  resolvers.py  settings.py  signals.py  tasks.py
activitypub/core/admin/: __init__.py  actions.py  admins.py  base.py  filters.py
activitypub/core/migrations/: 0001_initial.py
activitypub/core/models/: __init__.py  accounts.py  ap.py  as2.py  auth.py  collections.py  fields.py  languages.py  linked_data.py  managers.py  schemadotorg.py  sec.py
activitypub/core/projections/: __init__.py  base.py  core.py
activitypub/core/views/: __init__.py  activitystreams.py  discovery.py  linked_data.py
activitypub/extras/oauth/: admin.py  apps.py  forms.py  models.py  views.py
activitypub/management/commands/: register_local_instance.py  resolve_reference.py
activitypub/migrations/: 0001_initial.py
activitypub/models/: __init__.py  accounts.py  ap.py  as2.py  collections.py  fields.py  integrity_proofs.py  languages.py  linked_data.py  lookups.py  oauth.py  sec.py  secv1.py
activitypub/projections/: __init__.py  base.py  core.py
activitypub/serializers/: __init__.py  collections.py  fields.py  linked_data.py
activitypub/tests/: base.py  conftest.py  runtests.py  settings.py  test_frames.py  test_models.py  test_oauth.py  test_policies.py  test_projections.py  test_resolvers.py  test_serializers.py  test_tasks.py  test_views.py  urls.py
activitypub/tests/models/: test_as2.py  test_linked_data.py  test_reference_fields.py
activitypub/views/: __init__.py  activitystreams.py  discovery.py  linked_data.py  oauth.py
docs/overrides/partials/: footer.html
docs/pages/: faq.md  index.md
docs/pages/howtos/: block_spam.md  configure_toolkit.md  federate_existing_content.md  handle_incoming_activities.md  index.md  install_toolkit.md  query_context_data.md  reference_based_relationships.md  register_account.md  register_domain.md  (+2 more)
docs/snippets/: sponsors.md
project/: celery.py  settings.py  urls.py
tests/core/: base.py  test_collections.py  test_inbox.py  test_object_views.py  test_outbox.py  test_policies.py  test_projections.py  test_proxy.py  test_resolvers.py  test_tasks.py  test_views.py  urls.py
tests/lemmy/: __init__.py  test_context_aware_queryset.py  test_documents.py  test_filters.py  test_models.py  test_serializers.py  test_views.py  urls.py
tests/oauth/: test_oauth_views.py
tests/settings/: core.py  full.py  lemmy.py  oauth.py
(+68 files in other folders)
